--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="style.css">
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e954794f5e77a43"></script>
+	<meta name="naver-site-verification" content="484028aa6cf0d24e8d533c3c35a16b4d4f915527" />
 </head>
 
 <body>
