--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	</section>
 	<section class="hper">
 
-		<a href="" class="linking">세마고등학교 물리공학동아리 SEDA 바로가기</a>
+		<a href="https://cafe.naver.com/semagosedago" class="linking">세마고등학교 물리공학동아리 SEDA 바로가기</a>
 
 	</section>
 	<script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
