--- a/index.html
+++ b/index.html
@@ -67,15 +67,11 @@
 			<p class="imgpc"></p>
 			<p class="percent"></p>
 			<p class="re">나온 결과를 밑에 댓글에 공유하세요!</p>
+			<p class="re">다시 하려면 새로고침을 눌러주세요!</p>
 			<div id="label-container"></div>
 
 			<!-- Go to www.addthis.com/dashboard to customize your tools -->
 			<div class="addthis_inline_share_toolbox"></div>
-
-			<div class="image-title-wrap">
-				<button type="button" onclick="removeUpload()" class="remove-image">다른얼굴로 다시하기
-				</button>
-			</div>
 		</div>
 	</div>
 	<div id="webcam-container"></div>
