--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 	</section>
 	<section class="hper">
 
-		<p href="https://cafe.naver.com/semagosedago" class="linking">세마고등학교 물리공학동아리 SEDA 바로가기</p>
-		<p href="https://seda-myfaceisanime.netlify.com/" class="linking">나와 닮은 캐릭터는 누구일까? 바로가기</p>
+		<a href="https://cafe.naver.com/semagosedago" class="linking">세마고등학교 물리공학동아리 SEDA 바로가기</a><br>
+		<a href="https://seda-myfaceisanime.netlify.com/" class="linking">나와 닮은 캐릭터는 누구일까? 바로가기</a>
 
 	</section>
 	<script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
