--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		<div class="image-upload-wrap">
 			<input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
-			<div class="drag-text">자신의 얼굴 또는 친구의 얼굴사진을 끌어오거나 추가하기
+			<div class="drag-text">자신의 얼굴 또는 친구의 얼굴사진을<br> 끌어오거나 추가하기
 
 			</div>
 		</div>
