--- a/index.html
+++ b/index.html
@@ -218,6 +218,12 @@
 				case "25":
 					resultMessege = "당신은 허경영 총재를 닮았네요!"
 					break;
+					case "15":
+						resultMessege = "당신은 김대중 전 대통령을 닮았네요!"
+						break;
+					case "17":
+						resultMessege = "당신은  전 대통령을 닮았네요!"
+						break;
 							case "18":
 								resultMessege = "당신은 박원순 서울시장을 닮았네요!"
 								break;
