--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 						resultMessege = "당신은 김대중 전 대통령을 닮았네요!"
 						break;
 					case "17":
-						resultMessege = "당신은  전 대통령을 닮았네요!"
+						resultMessege = "당신은 노무현 전 대통령을 닮았네요!"
 						break;
 							case "18":
 								resultMessege = "당신은 박원순 서울시장을 닮았네요!"
